...
        android:layout_marginBottom="@dimen/myhealth_tips_feeback_content_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/myhealth_tips_feeback_content_vertical_margin"
        android:background="@android:color/background_light">

        <TextView
            android:id="@+id/myhealth_vitalityage_profile_item1"
            style="@style/MaterialLightBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/myhealth_vitalityage_profile_item2"
            style="@style/MaterialLightSubheadH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/myhealth_vitalityage_profile_item1"
            android:layout_marginBottom="@dimen/myhealth_vitalityage_profile_item2_bottom_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/myhealth_vitalityage_profile_feedback_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/myhealth_vitalityage_profile_item2"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-medium"
...
            android:layout_height="@dimen/myhealth_profile_small_icon_size"
            android:layout_alignParentTop="true"
            android:src="@drawable/learn_more_15"
            android:tint="@color/myhealth_tips_icon_tint" />

        <TextView
            android:id="@+id/myhealth_vitalityage_whattodo_title"
            style="@style/MaterialLightBody2Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/myhealth_inner_icon" />

        <TextView
            android:id="@+id/myhealth_vitalityage_whattodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myhealth_vitalityage_whattodo_title"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/myhealth_inner_icon"
            android:fontFamily="sans-serif"
...
