<?xml version="1.0" encoding="utf-8"?><!-- same as vhc, change both. consider refactoring and using a single card layout -->
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    card_view:cardCornerRadius="2dp"
    android:id="@+id/vitality_age_profile_tips_card">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/myhealth_card_top_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/myhealth_card_top_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/section_icon"
                android:layout_width="@dimen/myhealth_profile_icon_size"
                android:layout_height="@dimen/myhealth_profile_icon_size"
                android:src="@drawable/value_letswork_24" />

            <TextView
                android:id="@+id/section_title"
                style="@style/MaterialLightTitleH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/myhealth_card_left_margin"
                android:text="@string/my_health.tips_screen_what_you_can_improve_640" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1e000000" />

        <include layout="@layout/myhealth_vitalityage_tip_card_content" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1e000000" />

        <TextView
            android:id="@+id/more_tips"
            style="@style/MyHealthMoreResultsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin_small"
            android:layout_marginTop="8dp"
            android:text="@string/my_health.more_results_menu_item_title_792" />
    </LinearLayout>
</android.support.v7.widget.CardView>
