<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/vitality_age_header_padding"
    app:cardCornerRadius="@dimen/vitality_age_corner_radius"
    android:id="@+id/vitality_age_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vitality_age_light_blue">

        <ImageView
            android:id="@+id/vitality_age_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/vitality_age_disabled_xlarge"
            tools:ignore="ContentDescription" />


        <FrameLayout
            android:id="@+id/vitality_age_value_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toStartOf="@+id/vitality_age_bg"
            android:paddingTop="@dimen/va_topmargin">

            <TextView
                android:id="@+id/vitality_age_value"
                style="@style/VitalityAgeValue"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/vitality_age_value_height"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/va_value_bottom_margin"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textSize="@dimen/vitality_age_value"
                android:visibility="visible" />

            <TextView
                android:id="@+id/vitality_age_value_placeholder"
                style="@style/VitalityAgeLightHeader"
                android:layout_width="@dimen/vitality_age_placeholder_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vitality_age_placeholder_bottom_margin"
                android:layout_marginTop="@dimen/vitality_age_placeholder_top_margin"
                android:maxLines="2"
                android:visibility="gone" />
        </FrameLayout>


        <LinearLayout
            android:id="@+id/vitality_age_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/vitality_age_bg"
            android:layout_marginBottom="@dimen/vitality_age_subheader"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/va_status_icon"
                android:layout_width="@dimen/vitality_age_status_icon"
                android:layout_height="@dimen/vitality_age_status_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/vitality_age_summary"
                style="@style/VitalityAgeStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_marginLeft="@dimen/vitality_age_status_icon_margin"
                android:gravity="top"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vitality_age_subheader"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vitality_age_explanation"
                style="@style/MaterialDarkBody1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <Button
                android:id="@+id/vitality_age_learnmore"
                style="@style/VitalityAgeLearnMoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/vitalityage_learnmore_button_bottom_margin"
                android:layout_marginTop="@dimen/vitality_age_learnmore_top"
                android:background="@drawable/vitality_age_learnmore_button"
                android:text="@string/learn_more_button_title_104" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
